--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -1,4 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+*,
+*::after,
+*::before {
+    margin: 0;
+    padding: 0;
+    box-sizing: inherit;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html {
+    font-size: 62.5%;
+}
+
+html,
+body {
+    height: 100%;
+}
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
