--- a/front/src/app/core/components/button/button.component.html
+++ b/front/src/app/core/components/button/button.component.html
@@ -1,4 +1,8 @@
-<button class="button" [disabled]="disabled" (click)="onClick()">
+<button
+  class="button"
+  [disabled]="isDisabled"
+  [ngStyle]="buttonStyles"
+  (click)="onClick()"
+>
   {{ label }}
-  {{ disabled }}
 </button>
