--- a/front/src/app/core/components/button/button.component.scss
+++ b/front/src/app/core/components/button/button.component.scss
@@ -3,6 +3,7 @@
     width: 22rem;
     margin: 1rem;
     background-color: white;
+    border: none;
     border-radius: 1rem;
 
     @media(max-width: 37.5em) {
