add method create post

--- a/front/src/app/feature/post/post-item/post-item.component.html
+++ b/front/src/app/feature/post/post-item/post-item.component.html
@@ -6,6 +6,7 @@
         label="Créer un article"
         color="white"
         bgColor="rgba(119, 99, 197, 1)"
+        (buttonEvent)="create($event)"
       ></app-button>
     </div>
     <div class="option__right">
