add method to create comment

--- a/front/src/app/feature/post/post-list/post-list.component.html
+++ b/front/src/app/feature/post/post-list/post-list.component.html
@@ -1,4 +1,4 @@
-<mat-card class="card">
+<mat-card class="card" (click)="onClick()">
   <mat-card-header class="card__header">
     <mat-card-title class="card__title"
       >{{ postItem!.title }} test</mat-card-title
