add method for subscribing to a topic

--- a/front/src/app/core/components/header/header.component.html
+++ b/front/src/app/core/components/header/header.component.html
@@ -8,8 +8,8 @@
     <div class="menu__logoUser">
       <div class="header__menu">
         <ul>
-          <li>Articles</li>
-          <li>Thèmes</li>
+          <li (click)="goPost()">Articles</li>
+          <li (click)="goTopic()">Thèmes</li>
         </ul>
       </div>
       <div class="header__logoUser">
