add method to update the user

--- a/front/src/app/core/components/header/header.component.html
+++ b/front/src/app/core/components/header/header.component.html
@@ -13,7 +13,11 @@
         </ul>
       </div>
       <div class="header__logoUser">
-        <img src="../../../../assets/useruserImg.png" alt="user image" />
+        <img
+          src="../../../../assets/useruserImg.png"
+          alt="user image"
+          (click)="goProfile()"
+        />
       </div>
     </div>
     <div class="header__logoMenu">
