--- a/front/src/app/feature/profile/profile/profile.component.scss
+++ b/front/src/app/feature/profile/profile/profile.component.scss
@@ -13,6 +13,24 @@
     }
 }
 
+.topicSection {
+
+    margin-top: 4rem;
+
+    &__title {
+        display: flex;
+        justify-content: center;
+        font-weight: 700;
+        font-size: 2.4rem;
+        margin-bottom: 1rem;
+    }
+
+    &__card {
+        display: flex;
+        flex-wrap: wrap;
+    }
+}
+
 .profile {
     display: flex;
     flex-direction: column;
@@ -52,6 +70,29 @@
             padding: 1rem;
             margin-bottom: 2rem;
         }
+    }
+}
+
+.card {
+    background-color: #EEEEEE;
+    width: 39.1rem;
+    height: 17rem;
+    border-radius: .8rem;
+    padding: 2rem;
+    margin: 1rem;
+
+    &__title {
+        font-size: 1.6rem;
+        font-weight: 700;
+    }
+
+    &__button {
+        display: flex;
+        justify-content: center;
+    }
+
+    &__contain {
+        min-height: 6rem;
     }
 }
 
