--- a/front/src/app/feature/index/index.component.html
+++ b/front/src/app/feature/index/index.component.html
@@ -4,8 +4,12 @@
   </div>
   <div class="index__bottom">
     <div class="index__button">
-      <a routerLink="/login"> <app-button label="Se connecter"></app-button></a>
-      <a routerLink="/register"><app-button label="S'inscrire"></app-button></a>
+      <a routerLink="/login">
+        <app-button label="Se connecter" color="black"></app-button
+      ></a>
+      <a routerLink="/register"
+        ><app-button label="S'inscrire" color="black"></app-button
+      ></a>
     </div>
   </div>
 </div>
