--- a/front/src/app/core/components/button/button.component.scss
+++ b/front/src/app/core/components/button/button.component.scss
@@ -1,13 +1,8 @@
 .button {
-    height: 3.8rem;
-    width: 22rem;
     margin: 1rem;
     background-color: white;
     border: none;
     border-radius: 1rem;
-
-    @media(max-width: 37.5em) {
-        height: 3rem;
-        width: 18rem;
-    }
+    cursor: pointer;
+    pointer-events: initial;
 }
