formatting login css

--- a/front/src/app/feature/auth/register/register.component.html
+++ b/front/src/app/feature/auth/register/register.component.html
@@ -26,7 +26,7 @@
           <ng-container *ngIf="onError">
             <p class="errorMsg" [innerHTML]="errorMsg"></p>
           </ng-container>
-          <div class="registerButton">
+          <div class="authButton">
             <app-button
               label="S'inscrire"
               color="white"
