--- a/front/src/app/feature/profile/profile/profile.component.html
+++ b/front/src/app/feature/profile/profile/profile.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header route="profile"></app-header>
 <div class="main">
   <div class="profile">
     <div class="profile__title">
