--- a/front/src/app/core/components/header/header.component.scss
+++ b/front/src/app/core/components/header/header.component.scss
@@ -12,6 +12,7 @@
             position: absolute;
             top: 3rem;
             right: 5rem;
+            cursor: pointer;
         }
     }
 
@@ -92,9 +93,34 @@
         width: 20rem;
         z-index: 2;
         background-color: white;
+        // display: none;
+        opacity: 0;
+        z-index: -1;
     }
 }
 
-.active {
-    color: purple;
+.linkStyle {
+    color: rgba(119, 99, 197, 1);
 }
+
+// .slide-in {
+//     // opacity: 1;
+//     // z-index: 1;
+
+//     @media(max-width: 37.5em) {
+//         // display: block;
+//         transform: translateX(0);
+
+//         transition: transform 2s opacity 1s ease-out;
+//     }
+
+// }
+
+// .slide-out {
+
+//     @media(max-width: 37.5em) {
+//         transform: translateX(100%);
+//         transition: transform 2s;
+//     }
+
+// }
