--- a/front/src/app/feature/post/post-item/post-item.component.html
+++ b/front/src/app/feature/post/post-item/post-item.component.html
@@ -1,13 +1,16 @@
-<app-header></app-header>
+<app-header route="post"></app-header>
 <div class="post__main">
   <div class="post__option">
     <div class="option__left">
-      <app-button
-        label="Créer un article"
-        color="white"
-        bgColor="rgba(119, 99, 197, 1)"
-        (buttonEvent)="create($event)"
-      ></app-button>
+      <div class="createPostButton">
+        <app-button
+          label="Créer un article"
+          color="white"
+          bgColor="rgba(119, 99, 197, 1)"
+          border="none"
+          (buttonEvent)="create($event)"
+        ></app-button>
+      </div>
     </div>
     <div class="option__right">
       <p>Trier par &darr;</p>
