--- a/front/src/app/feature/post/post-list/post-list.component.scss
+++ b/front/src/app/feature/post/post-list/post-list.component.scss
@@ -2,10 +2,18 @@
     background: rgba(245, 245, 245, 1);
     width: 35.9rem;
     height: 18rem;
+    padding: 1.5rem;
+    position: relative;
+    border-radius: .8rem;
+
+    @media(max-width: 25em) {
+        width: 30rem;
+    }
 
     &__title {
         font-size: 1.6rem;
         font-weight: 600;
+        margin-bottom: 1.6rem;
     }
 
     &__contain {
