--- a/front/src/app/feature/topic/topic-item/topic-item.component.html
+++ b/front/src/app/feature/topic/topic-item/topic-item.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<app-header route="topic"></app-header>
 <div class="main">
   <div class="main__card">
     <div class="card" *ngFor="let topic of topics">
