formatting design profile

--- a/front/src/app/feature/post/post-form/post-form.component.html
+++ b/front/src/app/feature/post/post-form/post-form.component.html
@@ -48,11 +48,14 @@
         ></textarea>
       </div>
       <div class="form__group">
-        <app-button
-          label="Créer"
-          color="white"
-          bgColor="rgba(119, 99, 197, 1)"
-        ></app-button>
+        <div class="createPostButton">
+          <app-button
+            label="Créer"
+            color="white"
+            bgColor="rgba(119, 99, 197, 1)"
+            border="none"
+          ></app-button>
+        </div>
       </div>
     </form>
   </div>
