--- a/front/src/app/feature/profile/profile/profile.component.scss
+++ b/front/src/app/feature/profile/profile/profile.component.scss
@@ -1,6 +1,10 @@
 .main {
     padding: 2rem;
 
+    @media(max-width: 37.5em) {
+        padding: 1;
+    }
+
     &__separate {
         position: relative;
 
@@ -28,6 +32,11 @@
     &__card {
         display: flex;
         flex-wrap: wrap;
+
+        @media(max-width: 37.5em) {
+            flex-direction: column;
+            align-items: center;
+        }
     }
 }
 
@@ -76,10 +85,14 @@
 .card {
     background-color: #EEEEEE;
     width: 39.1rem;
-    height: 17rem;
+    min-height: 17rem;
     border-radius: .8rem;
     padding: 2rem;
     margin: 1rem;
+
+    @media(max-width: 37.5em) {
+        width: auto;
+    }
 
     &__title {
         font-size: 1.6rem;
@@ -102,4 +115,10 @@
 
 .success {
     color: green;
+}
+
+.saveButton {
+    height: 4rem;
+    width: 13.9rem;
+    margin-bottom: 2rem;
 }
