--- a/front/src/app/feature/post/post-list/post-list.component.html
+++ b/front/src/app/feature/post/post-list/post-list.component.html
@@ -1,6 +1,6 @@
 <div class="card" (click)="onClick()">
   <div class="card__header">
-    <div class="card__title">{{ postItem!.title }} test</div>
+    <div class="card__title">{{ postItem!.title }}</div>
     <div class="card__subtitle">
       <span class="subtitle__date">{{
         postItem!.created_at | date : "dd/MM/Y H:mm"
@@ -9,6 +9,9 @@
     </div>
   </div>
   <div class="card__contain">
-    <p>{{ postItem!.post }}</p>
+    <p>
+      {{ postItem!.post | slice : 0 : 100
+      }}{{ postItem!.post!.length > 100 ? "..." : "" }}
+    </p>
   </div>
 </div>
