--- a/front/src/app/feature/profile/profile/profile.component.html
+++ b/front/src/app/feature/profile/profile/profile.component.html
@@ -1,4 +1,7 @@
-<app-header route="profile"></app-header>
+<app-header
+  route="profile"
+  srcImg="../../../../assets/activeProfile.png"
+></app-header>
 <div class="main">
   <div class="profile">
     <div class="profile__title">
