update cursor pointer for some elements

--- a/front/src/app/feature/post/comment/comment.component.scss
+++ b/front/src/app/feature/post/comment/comment.component.scss
@@ -84,6 +84,8 @@
     }
 
     &__send {
+        cursor: pointer;
+
         @media(max-width: 37.5em) {
             position: absolute;
             right: 0;
