--- a/front/src/app/feature/post/post-list/post-list.component.scss
+++ b/front/src/app/feature/post/post-list/post-list.component.scss
@@ -5,6 +5,7 @@
     padding: 1.5rem;
     position: relative;
     border-radius: .8rem;
+    cursor: pointer;
 
     @media(max-width: 25em) {
         width: 30rem;
