--- a/front/src/app/core/components/header/header.component.scss
+++ b/front/src/app/core/components/header/header.component.scss
@@ -23,12 +23,15 @@
             right: 0;
             padding: 1rem;
         }
+
+        cursor: pointer;
     }
 
     &__img {
         img {
             width: 14rem;
             height: 8.1rem;
+
         }
     }
 
@@ -71,6 +74,10 @@
             }
         }
 
+        & li {
+            cursor: pointer;
+        }
+
 
     }
 }
@@ -102,25 +109,3 @@
 .linkStyle {
     color: rgba(119, 99, 197, 1);
 }
-
-// .slide-in {
-//     // opacity: 1;
-//     // z-index: 1;
-
-//     @media(max-width: 37.5em) {
-//         // display: block;
-//         transform: translateX(0);
-
-//         transition: transform 2s opacity 1s ease-out;
-//     }
-
-// }
-
-// .slide-out {
-
-//     @media(max-width: 37.5em) {
-//         transform: translateX(100%);
-//         transition: transform 2s;
-//     }
-
-// }
