--- a/front/src/app/feature/post/post-item/post-item.component.scss
+++ b/front/src/app/feature/post/post-item/post-item.component.scss
@@ -36,6 +36,7 @@
         position: absolute;
         right: 4rem;
         top: 1.7rem;
+        cursor: pointer;
 
         @media(max-width: 37.5em) {
             position: relative;
