remove angular/material

--- a/front/src/app/feature/auth/register/register.component.html
+++ b/front/src/app/feature/auth/register/register.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar class="header__register">
+<div class="header__register">
   <img src="../../../../assets/logo_min.png" alt="logo MDD" />
-</mat-toolbar>
+</div>
 <div class="register__main">
   <div class="main__header">
     <div class="register__back">
