--- a/front/src/app/feature/auth/login/login.component.html
+++ b/front/src/app/feature/auth/login/login.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar class="header__login">
+<div class="header__login">
   <img src="../../../../assets/logo_min.png" alt="logo MDD" />
-</mat-toolbar>
+</div>
 <div class="login__main">
   <div class="main__header">
     <div class="login__back">
