--- a/front/src/styles/styles.scss
+++ b/front/src/styles/styles.scss
@@ -19,6 +19,7 @@ body {
     box-sizing: border-box;
     margin: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
+    font-size: 1.6rem;
 }
 
 .authButton {
