--- a/front/src/app/feature/post/post/post.component.scss
+++ b/front/src/app/feature/post/post/post.component.scss
@@ -52,6 +52,10 @@
         position: relative;
         margin-top: 1rem;
     }
+
+    &__separate {
+        margin-top: 2rem;
+    }
 }
 
 .comment {
